--- a/MusicPlayerWpf/MainWindow.xaml
+++ b/MusicPlayerWpf/MainWindow.xaml
@@ -1,42 +1,164 @@
-﻿<Window x:Class="MusicPlayerWpf.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MusicPlayerWpf"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="400">
+﻿<Window
+    x:Class="MusicPlayerWpf.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:MusicPlayerWpf"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="T: Music"
+    Width="500"
+    Height="350"
+    AllowsTransparency="True"
+    Background="{x:Null}"
+    Icon="/logo.ico"
+    ResizeMode="NoResize"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None"
+    mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto" />
+            <RowDefinition />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-        
-        <Menu Grid.Row="0">
-            <MenuItem Header="File">
-                <MenuItem x:Name="OpenFileMI" Click="OpenFileMI_Click" Header="Open file"/>
-                <MenuItem x:Name="OpenFolderMI" Click="OpenFolderMI_Click" Header="Open folder"/>
-            </MenuItem>
-            
-            <MenuItem Header="View">
-                <MenuItem Header="Hide window"/>
-            </MenuItem>
+        <Grid Grid.Row="0" Background="#E91E63">
+            <Menu>
+                <MenuItem Header="_File">
+                    <MenuItem
+                        Click="OpenFileMI_Click"
+                        Header="Open"
+                        Icon="{materialDesign:PackIcon Kind=File}" />
+                    <MenuItem
+                        Click="OpenFolderMI_Click"
+                        Header="Open Folder.."
+                        Icon="{materialDesign:PackIcon Kind=Folder}" />
+                    <Separator />
+                    <MenuItem Header="Copy song" Icon="{materialDesign:PackIcon Kind=ContentCopy}" />
+                    <MenuItem Header="Save playlist" Icon="{materialDesign:PackIcon Kind=ContentSave}" />
+                    <Separator />
+                    <MenuItem
+                        Header="Exit"
+                        Icon="{materialDesign:PackIcon Kind=ExitToApp}"
+                        InputGestureText="Ctrl+E" />
+                </MenuItem>
+                <MenuItem Header="_Edit">
+                    <MenuItem
+                        Command="Cut"
+                        Header="_Cut"
+                        Icon="{materialDesign:PackIcon Kind=ContentCut}" />
+                    <MenuItem
+                        Command="Copy"
+                        Header="_Copy"
+                        Icon="{materialDesign:PackIcon Kind=ContentCopy}" />
+                    <MenuItem
+                        Command="Paste"
+                        Header="_Paste"
+                        Icon="{materialDesign:PackIcon Kind=ContentPaste}" />
+                </MenuItem>
+            </Menu>
+            <WrapPanel HorizontalAlignment="Right" VerticalAlignment="Center">
+                <Button
+                    Content="{materialDesign:PackIcon WindowMinimize}"
+                    Foreground="White"
+                    IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
+                    Style="{StaticResource MaterialDesignFlatButton}"
+                    ToolTip="Minimize window" />
+                <Button
+                    Content="{materialDesign:PackIcon WindowRestore}"
+                    Foreground="White"
+                    IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
+                    Style="{StaticResource MaterialDesignFlatButton}"
+                    ToolTip="Restore window" />
+                <Button
+                    x:Name="CloseBtn"
+                    Click="CloseBtn_Click"
+                    Content="{materialDesign:PackIcon Close}"
+                    Foreground="White"
+                    IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
+                    Style="{StaticResource MaterialDesignFlatButton}"
+                    ToolTip="Close window" />
+            </WrapPanel>
+        </Grid>
 
-            <MenuItem Header="Settings"/>
-        </Menu>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="2*" />
+            </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Row="1">
-            <Label x:Name="FileNameLb"/>
-            <DataGrid x:Name="FilesDG" ItemsSource="{Binding filesInfolders}" Height="200" AutoGenerateColumns="True"></DataGrid>
-        </StackPanel>
+            <Image
+                Grid.Column="0"
+                Margin="12"
+                Source="/logo.jpg" />
 
-        <Border Grid.Row="2" BorderBrush="Lime" BorderThickness="2" CornerRadius="5" Margin="5"> 
-            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" >
-                <Button x:Name="PlayBtn" Click="PlayBtn_Click" Margin="5" Content="Play"/>
-                <Button x:Name="StopBtn" Click="StopBtn_Click" Margin="5" Content="Stop"/>
-                <Button x:Name="PauseBtn" Click="PauseBtn_Click" Margin="5" Content="Pause"/>
-            </StackPanel>
-        </Border>
+            <Grid Grid.Column="1" Margin="12">
+                <DataGrid
+                    x:Name="FilesDG"
+                    AutoGenerateColumns="True"
+                    ItemsSource="{Binding filesInfolders}" />
+            </Grid>
+        </Grid>
+
+        <Grid Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
+                <Label x:Name="FileNameLb" Content="No song select" />
+            </Grid>
+            <Grid Grid.Row="1">
+                <Grid>
+                    <Slider
+                        Maximum="100"
+                        Minimum="0"
+                        Value="35" />
+                    <Label HorizontalAlignment="Left" Content="0:00" />
+                    <Label HorizontalAlignment="Right" Content="3:26" />
+                </Grid>
+                <materialDesign:Card Margin="0,20,0,0">
+                    <Grid>
+                        <Grid Width="120" HorizontalAlignment="Center">
+                            <Button
+                                HorizontalAlignment="Left"
+                                Content="{materialDesign:PackIcon SkipPrevious}"
+                                IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
+                                Style="{StaticResource MaterialDesignFlatButton}"
+                                ToolTip="SkipPrevious" />
+                            <Button
+                                HorizontalAlignment="Right"
+                                Content="{materialDesign:PackIcon SkipNext}"
+                                IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
+                                Style="{StaticResource MaterialDesignFlatButton}"
+                                ToolTip="SkipNext" />
+                        </Grid>
+                        <WrapPanel HorizontalAlignment="Right" VerticalAlignment="Center">
+                            <materialDesign:PackIcon
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Center"
+                                Kind="VolumeMedium" />
+                            <Slider
+                                Width="80"
+                                Margin="0,0,10,0"
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Center"
+                                Maximum="100"
+                                Minimum="0"
+                                Value="100" />
+                        </WrapPanel>
+                    </Grid>
+                </materialDesign:Card>
+                <Button
+                    Margin="0,12,0,0"
+                    HorizontalAlignment="Center"
+                    Click="PlayBtn_Click"
+                    IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
+                    Style="{StaticResource MaterialDesignFloatingActionMiniButton}"
+                    ToolTip="MaterialDesignFloatingActionMiniButton">
+                    <materialDesign:PackIcon Kind="Play" />
+                </Button>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
